# AShareRAG

./: .env.example  .gitignore  README.md  claude.md  package.json  pyproject.toml
.ai/: debug-log.md  story-1.3-dod-checklist.md
.github/workflows/: ci.yml
config/: prompts.yaml  settings.py
docs/: BREAKING_CHANGES.md  architecture.md  prd.md  workflow-plan.md
docs/architecture/: 1-架构概述与核心原则.md  2-核心架构组件与交互流程.md  3-统一项目结构-source-tree.md  4-ai开发工作流与交付标准.md  5-cicd-持续集成持续部署-策略.md  6-架构风险与缓解策略.md  index.md
docs/components/: query_intent_router.md
docs/optimization/: knowledge_graph_constructor_optimization.md
docs/prd/: 1-项目目标与背景.md  2-功能性需求-functional-requirements.md  3-非功能性需求-non-functional-requirements.md  4-史诗epics规划与迭代策略.md  5-潜在风险与缓解.md  6-后续步骤.md  index.md
docs/stories/: 1.1.project-setup-and-data-ingestion.md  1.2.1.enhanced-ner-with-entity-types.md  1.2.named-entity-recognition.md  1.3.relation-extraction.md  1.4.performance-optimization-for-llm-operations.md  1.5.text-embedding-and-vector-storage.md  1.6.unified-knowledge-graph-construction.md  1.7.refactor-knowledge-graph-constructor.md  2.1-query-intent-router-flowchart.md  2.1.query-intent-detection.md  2.2.fact-based-qa-implementation.md  2.3.relationship-discovery-implementation.md
output/full_dataset/: processing_checkpoint.json  processing_progress.json
output/graph/: 10_companies_full_optimized.graphml  10_companies_full_optimized_metadata.json
output/optimized_pipeline/: knowledge_graph.graphml  knowledge_graph_stats.json  ner_re_results.json  ner_re_summary.json
output/test_results/: story_2.1_validation_20250707_122034.json
reserved/: 5_sample_Ashare_companies_corpus.json  basic_embedding_advanced.py  chinese_text_splitter.py  deepseek_llm.py  filter_deepseek-v3-instruct.json  ner_chinese.py  qwen3_reranker_official_best_practice.py  rag_qa_chinse_companies.py  triple_extraction_chinese.py
scripts/: analyze_outputs.py  debug_vector_storage.py  full_dataset_pipeline_fixed copy.py  optimized_pipeline.py  performance_comparison.py  show_document_sources.py  test_10_companies_optimized_full.py  test_10_companies_pipeline.py  test_adapter.py  test_complete_pipeline.py  test_embedding_performance.py  test_real_data_integration.py  validate.sh  validate_ner_re.py
scripts/story1.1/: README.md  test_query_intent_router_validation.py
src/: pipeline.py
src/adapters/: __init__.py  deepseek_adapter.py  llm_adapter.py  reranker_adapter.py
src/components/: __init__.py  answer_synthesizer.py  data_ingestor.py  embedding_service.py  knowledge_graph_constructor.py  ranker.py  retriever.py  vector_indexer.py  vector_storage.py
src/intent_detection/: __init__.py  detector.py  keywords.py  llm_intent_adapter.py  monitoring.py  router.py  types.py
src/pipeline/: __init__.py  fact_qa_pipeline.py  offline_pipeline.py
src/server/: __init__.py  main.py
src/utils/: __init__.py  logging_config.py  progress_logger.py
tests/: conftest.py
tests/api/: test_fact_qa_endpoints.py
tests/integration/: test_embedding_pipeline.py  test_fact_qa_pipeline.py  test_knowledge_graph_pipeline.py  test_ner_pipeline.py  test_offline_pipeline.py  test_performance_simple.py  test_query_intent_routing.py  test_retriever_integration.py
tests/performance/: __init__.py  test_fact_qa_performance.py  test_query_intent_performance.py
tests/unit/: test_answer_synthesizer.py  test_data_ingestor.py  test_deepseek_adapter.py  test_edge_cases.py  test_embedding_service.py  test_knowledge_graph_constructor.py  test_llm_adapter.py  test_logging.py  test_prompts_config.py  test_query_intent_router.py  test_ranker.py  test_reranker_adapter.py  test_retriever.py  test_settings.py  test_vector_indexer.py  test_vector_storage.py
